2001-08-21  Earnie Boyd  <earnie@SF.Net>

	* include/setupapi.h: Formatting.

2001-08-21  Earnie Boyd  <earnie@SF.Net>

	* include/shlobj.h: Remove \r from the line endings.

2001-08-21  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/setupapi.h : New file.
	* lib/setupapi.def:New file.
	* lib/test.c: Include setupapi.h.

2001-08-21  Danny Smith  <dannysmith@users.sourceforge.net>
	* include/winioctl.h (_DISK_PERFORMANCE): Correct typo.

2001-08-21  Mattia Barbon  <mbarbon@dsi.unive.it>

	* include/richedit.h (ENLINK): Add structure definition.
	(EM_AUTOURLDETECT, EN_LINK, ENM_LINK): Add defines.

2001-08-21  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/shlobj.h (CMIC_*): Remove duplicate defines.
	(CMDSTR_*): Remove duplicates; UNICODE string constants.
	(GCS_*): Make UNICODE.
	(CSIDL_*): Add more defines.
	* include/winioctl.h (_MEDIA_TYPE): Add pointer typedef.
	(_DISK_GEOMETRY): Ditto.
	(_DISK_PERFORMANCE): Ditto.
	* include/winbase.h (HasOverlappedIoCompleted): Add macro.

2001-08-15  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h: Move CHAR, SHORT and LONG typedefs outside
	of block protected by #ifndef VOID.
	(This reverts 1998-12-01 Anders Norlander change.)
	* include/odbcinst.h: End file with newline.
	* include/raserror.h: Ditto.	

2001-08-15  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winsock2.h (#include <wtypes.h): Don't.
	(_BLOB): Define instead, if not already done.
	(__BLOB_T_DEFINED: New define for guarding _BLOB.
	* include/wtypes.h (_BLOB): Guard against prior definition. 

2001-08-15  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/oaidl.h (tagVARIANT): Mark anonymous structs and unions
	 as 	__extension__.
	(tagTYPEDESC): Ditto.
	(_wireBRECORD): Add structure definition.
	(_wireSAFEARR_BRECORD): Ditto.
	(_wireSAFEARR_HAVEIID): Ditto.
	(_wireSAFEARRAY_UNION.u): Add fields SAFEARR_BRECORD RecordStr,
	SAFEARR_HAVEIID HaveIidStr.