@@ -311,6 +311,7 @@ extern "C" {
 #define SYMBOL_CHARSET	2
 #define SHIFTJIS_CHARSET	128
 #define HANGEUL_CHARSET	129
+#define HANGUL_CHARSET  129
 #define GB2312_CHARSET	134
 #define CHINESEBIG5_CHARSET	136
 #define GREEK_CHARSET	161
