@@ -1,3 +1,13 @@
+2001-08-29  Eric Kohl  <ekohl@users.sourceforge.net>
+
+	* include\winnt.h: Allow anonymous (Xxx.LowPart) or
+	non-anonymous (Xxx.u.LowPart) access to HighPart and
+	LowPart of a LARGE_INTEGER or ULARGE_INTEGER.
+
+2001-08-24  TAMURA Kent  <tkent@users.sourceforge.net>
+
+    * include/wingdi.h (HANGUL_CHARSET): Add define.
+
 2001-08-21  Earnie Boyd  <earnie@SF.Net>
 
 	* include/setupapi.h: Formatting.
